mega menu arabic alignment fix *prakash

--- a/hybris-sagia/hybris/bin/custom/sagia/sagiastorefront/web/webroot/WEB-INF/_ui-src/responsive/themes/alpha/less/eservices/mega-menu.less
+++ b/hybris-sagia/hybris/bin/custom/sagia/sagiastorefront/web/webroot/WEB-INF/_ui-src/responsive/themes/alpha/less/eservices/mega-menu.less
@@ -230,3 +230,7 @@
 .mobile-nav-active {
     overflow: hidden;
 }
+[dir=rtl] .dropdown-large{
+	right: auto !important;
+    left: -60px !important;
+  }
